@@ -1,0 +1,8 @@
+def foo(x):
+    if x>0:
+        return x+1
+
+    else:
+        return x-1
+
+return foo(5)
